# gan-robot-controller

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: face_rotation.rs  gan_robot_controller.rs  lib.rs  move_map.rs
src/: gan_robot_controller.rs  lib.rs  main.rs  move_map.rs
