[workspace]
members = ["cli", "lib"]
resolver = "2"
default-members = ["cli"]

[workspace.package]
authors = ["kaoru <k@warpnine.io>"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "env", "wrap_help"] }
env_logger = "0.11.6"
log = "0.4.22"
